2007-01-14  Per Bothner  <per@bothner.com>

	* TimeUtils.java (currentDateTimeLocal): New ThreadLocal static.
	(currentDateTime, currentDate, currentTime, implicitTimezone):
	New static methods.

	* NamedCollator.java (codepointCompare): New method.
	(compare): Use it.
	* Compare.java (atomicCompare): Likewise.

2007-01-04  Per Bothner  <per@bothner.com>

	* NodeUtils.java (baseUri): Change type of local 'uri' to Path.

	* StringUtils.java (encodeForUri): Move guts of method to URIPath.java.

2006-12-29  Per Bothner  <per@bothner.com>

	* NodeUtils.java (resolve): Use gnu.text.Path.
	* StringUtils.java (coerceToString): Likewise.
	* BooleanValue.java (booleanValue): Likewise.
	* QNameUtils.java (resolveURI): Likewise.
	(namespaceURIFromQName): Create URIPath.

2006-12-17  Per Bothner  <per@bothner.com>

	* QNameUtils.java (resolveURI): Handle UntypeAtomic.

2006-12-06  Per Bothner  <per@bothner.com>

	* SequenceUtils.java: Update for renamed Consumer methods.

`2006-12-01  Per Bothner  <per@bothner.com>

	* StringUtils.java (normalizeUnicode): Add working implementation,
	using java.text.Normalizer (Java 6 only).

	* Debug.java (trace): Use XMLPrinter to format output.

	* NodeUtils.java: Suppress unchecked warnings if JAVA5.

	* NodeUtils.java (collection): Replace old methods.
	(setSavedCollection, getSavedCollection): New static methods.
	(collectionResolverSymbol): New constant.
	(resolve): New method.
	(docCached, availableCached, collection): Use it.

2006-11-29  Per Bothner  <per@bothner.com>

	* NodeUtils.java (docAvailable): Moved from gnu.kawa.xml.Document.
	(docCached): Moved and renamed from Document/parseCahched.
	(docCached, docAvailable): Use StringUtils.coerceToString.

2006-11-28  Per Bothner  <per@bothner.com>

	* ArithOp.java (div(BigDecimal,BigDecimal)): New static method.
	(apply2): Use new div method.
	(apply2): Use BigDecimal division for Duration division.
	* TimeUtils.java (secondsBigDecimalFromDuration): New static method.