@@ -1,5 +1,9 @@
 2007-01-14  Per Bothner  <per@bothner.com>
 
+	* SequenceUtils.java (isZeroOrOne, coerceToZeroOrOne): New methods.
+	(zeroOrOne): Use coerceToZeroOrOne.
+	* StringUtils.java (concat$V): Use coerceToZeroOrOne.
+
 	* TimeUtils.java (currentDateTimeLocal): New ThreadLocal static.
 	(currentDateTime, currentDate, currentTime, implicitTimezone):
 	New static methods.
